--- a/src/helpers/variables.scss
+++ b/src/helpers/variables.scss
@@ -6,6 +6,19 @@ $button-active-background-color: #303f9f;
 $button-color: #ffffff;
 
 $accent-color: #2196f3;
+$delete-bg-color: #ff0000;
+$delete-active-bg-color: #ff5000;
+$button-bg-color: #0078bf;
+// $button-color: #a6e9ff;
+$label-color: #483c8c;
+$button-active-bg-color: #0078bf;
+
+$shadow: 13px 5px 10px 3px rgba(75, 75, 100, 0.5);
+$border-radius: 5px;
+
+$shadow-button: 0 2.8px 2.2px rgba(0, 0, 0, 0.03), 0 2px 5.3px rgba(0, 0, 0, 0.05),
+  0 2px 10px rgba(0, 0, 0, 0.06), 0 2px 17.9px rgba(0, 0, 0, 0.07), 0 2px 33.4px rgba(0, 0, 0, 0.09),
+  0 2px 80px rgba(0, 0, 0, 0.12);
 
 $accent-background-color: #7ac4ff;
 $color: #2a363b;
@@ -13,8 +26,8 @@ $color: #2a363b;
 $border: 1px solid $color;
 $border-movie: 1px solid rgb(42, 157, 246);
 
-$box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-  0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+$box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+  0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 $box-shadow-movie: 0px 3px 18px 2px rgba(42, 157, 246, 0.66);
 
 $text-color: #000000;
