--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 80px;
-  margin-bottom: 16px;
   border-bottom: $border;
+  background-color: $accent-background-color;
+  border-radius: 15px;
 }
