--- a/src/components/Phonebook/Filter/Filter.module.scss
+++ b/src/components/Phonebook/Filter/Filter.module.scss
@@ -13,6 +13,8 @@
 .label {
   display: block;
   color: $label-color;
+  font-weight: 700;
+
   width: 100%;
   padding: 10px 0;
   margin-bottom: 20px;
