--- a/src/components/Phonebook/Phonebook.module.scss
+++ b/src/components/Phonebook/Phonebook.module.scss
@@ -2,10 +2,10 @@
 
 .componenet {
   width: 700px;
-  background-color: $button-color;
+  background-color: $accent-background-color;
   border-radius: 15px;
   box-shadow: $shadow;
-  margin: 0 auto;
+  margin: 20px auto 0 auto;
   padding: 20px;
 }
 
