--- a/src/components/Phonebook/variables.scss
+++ b/src/components/Phonebook/variables.scss
@@ -2,6 +2,7 @@ $button-bg-color: #0078bf;
 $button-color: #a6e9ff;
 $label-color: #483c8c;
 $button-active-bg-color: #095f93;
+$accent-background-color: #7ac4ffd9;
 
 $shadow: 13px 5px 10px 3px rgba(75, 75, 100, 0.5);
 $border-radius: 5px;
