--- a/src/helpers/variables.scss
+++ b/src/helpers/variables.scss
@@ -20,7 +20,7 @@ $shadow-button: 0 2.8px 2.2px rgba(0, 0, 0, 0.03), 0 2px 5.3px rgba(0, 0, 0, 0.0
   0 2px 10px rgba(0, 0, 0, 0.06), 0 2px 17.9px rgba(0, 0, 0, 0.07), 0 2px 33.4px rgba(0, 0, 0, 0.09),
   0 2px 80px rgba(0, 0, 0, 0.12);
 
-$accent-background-color: #7ac4ff;
+$accent-background-color: #7ac4ffd9;
 $color: #2a363b;
 
 $border: 1px solid $color;
