--- a/src/views/views.module.scss
+++ b/src/views/views.module.scss
@@ -22,9 +22,23 @@ ul {
   font-weight: 700;
 }
 
+.info {
+  color: #004175;
+  background-color: #7ac4ffd9;
+  padding: 20px;
+  border-radius: 15px;
+}
+
 .title {
+  text-align: center;
   font-size: 40px;
-  color: #0000ff;
+  margin-bottom: 10px;
+}
+
+.text {
+  text-align: center;
+  font-size: 20px;
+  color: rgb(18, 103, 170);
 }
 
 .find {
@@ -39,4 +53,49 @@ ul {
 .findDone {
   composes: find;
   background-color: $accent-background-color;
+}
+
+/******* Login form ********/
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 570px;
+  margin: 20px auto 0 auto;
+  background-color: $accent-background-color;
+  border-radius: 15px;
+  padding: 20px;
+}
+
+.formTitle {
+  margin-bottom: 20px;
+}
+
+.label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  width: 90%;
+}
+
+.input {
+  outline: none;
+  border-radius: 15px;
+  height: 25px;
+  padding: 0 15px;
+}
+
+.button {
+  padding: 5px 15px;
+  color: $button-color;
+  background-color: $button-bg-color;
+  border-radius: 15px;
+
+  &:hover,
+  &:focus {
+    background-color: $button-active-bg-color;
+    box-shadow: $shadow-button;
+  }
 }
